--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Leonardo Lunardelli - DoWhile 2021</title>
 
     <link rel="stylesheet" href="style.css" />
+    <script src="index.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -19,32 +20,32 @@
                   <img src="images/Meu projeto.jpg" alt="Foto pessoal" />
               </div>
 
-              <h1>Leonardo Lunardelli</h1>
-              <a href="https://www.instagram.com/leo.lunardelli" target="_blank">
+              <h1 id="userName">Leonardo Lunardelli</h1>
+              <a href="https://github.com/leolunardelli" target="_blank">
                 <img src="images/github 2.svg" alt="ícone github" target="_blank" />  
-                leo.lunardelli</a>
+                leolunardelli</a>
                 <p>
-                    An instructor focused on helping people start programming for web 
+                    An developer focused on frontend always looking to evolve
                 </p>
-                <ul>
-                    <li>
-                        <a href="https://www.youtube.com/channel/UCA7U-deMYMaKOvvVEEg67LA" target="_blank">
-                            <img src="images/Youtube.svg" alt="ícone youtube" target="_blank" />
+                <ul id="socialLinks">
+                    <li class="youtube">
+                        <a href="https://www.youtube.com/" target="_blank">
+                            <img src="images/Youtube.svg" alt="ícone youtube" />
                         </a>
                     </li>
-                    <li>
-                        <a href="https://www.instagram.com/leo.lunardelli" target="_blank">
-                            <img src="images/Instagram.svg" alt="ícone instagram" target="_blank" />
+                    <li class="facebook">
+                        <a href="https://www.facebook.com/" target="_blank">
+                            <img src="images/Facebook.svg" alt="ícone facebook" />
                         </a>
                     </li>
-                    <li>
-                        <a href="https://twitter.com/Llunardell1" target="_blank">
-                            <img src="images/Twitter.svg" alt="ícone twitter" target="_blank" />
+                    <li class="instagram">
+                        <a href="https://www.instagram.com/" target="_blank">
+                            <img src="images/Instagram.svg" alt="ícone instagram" />
                         </a>
                     </li>
-                    <li>
-                        <a href="https://www.facebook.com/leonardo.lunardelli/" target="_blank">
-                            <img src="images/Facebook.svg" alt="ícone facebook" target="_blank" />
+                    <li class="twitter">
+                        <a href="https://twitter.com/" target="_blank">
+                            <img src="images/Twitter.svg" alt="ícone twitter" />
                         </a>
                     </li>
                 </ul>
