--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 
 <html>
   <head>
-    <title>Leonardo Lunardelli - DoWhile 2021</title>
+    <title>Leonardo Lunardelli - DoWhile 2022</title>
 
     <link rel="stylesheet" href="style.css" />
-    <script src="index.js" defer></script>
+    <script src="main.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -17,14 +17,14 @@
                   <span>
                       <img src="images/build.svg" alt="Selo Rocketseat" />
                   </span>
-                  <img src="images/Meu projeto.jpg" alt="Foto pessoal" />
+                  <img src="images/Meu projeto.jpg" alt="Foto pessoal" id="userImage" />
               </div>
 
-              <h1 id="userName">Leonardo Lunardelli</h1>
-              <a href="https://github.com/leolunardelli" target="_blank">
-                <img src="images/github 2.svg" alt="ícone github" target="_blank" />  
-                leolunardelli</a>
-                <p>
+              <h1 id="userName">Leo Lunardelli</h1>
+              <a  id="userLink" href="https://github.com/" target="_blank" >
+                <img src="images/github 2.svg" alt="ícone github" target="_blank" id="git" />  
+                <span id="userLogin">Leonuar</span></a>
+                <p id="bioProfile">
                     An developer focused on frontend always looking to evolve
                 </p>
                 <ul id="socialLinks">
