--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               </div>
 
               <h1 id="userName">Leo Lunardelli</h1>
-              <a href="https://github.com/" target="_blank" id="userLink" />
+              <a href="https://github.com/leolunardelli" target="_blank" id="userLink" />
                 <img src="images/github 2.svg" alt="ícone github" target="_blank" id="git" />  
                 <span id="userLogin">Leonuar</span></a>
                 <p id="bioProfile">
