--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
               </div>
 
               <h1 id="userName">Leo Lunardelli</h1>
-              <a href="https://github.com/leolunardelli" target="_blank" id="userLink" />
-                <img src="images/github 2.svg" alt="ícone github" target="_blank" id="git" />  
-                <span id="userLogin">Leonuar</span></a>
-                <p id="bioProfile">
+                <a id="userLink" href="https://github.com/leolunardelli" target="_blank" >
+                  <img src="images/github 2.svg" alt="ícone github" target="_blank" id="git" />  
+                  <span id="userLogin">Leonuar</span></a>
+                  <p id="bioProfile">
                     An developer focused on frontend always looking to evolve
-                </p>
+                  </p>
                 <ul id="socialLinks">
                     <li class="youtube">
                         <a href="https://www.youtube.com/" target="_blank">
