--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                     An developer focused on frontend always looking to evolve
                   </p>
                 <ul id="socialLinks">
-                    <li class="youtube">
+                    <li class="linkedin">
                         <a href="https://www.youtube.com/" target="_blank">
-                            <img src="images/Youtube.svg" alt="ícone youtube" />
+                            <img src="images/linkedin.svg" alt="ícone linkedin" />
                         </a>
                     </li>
                     <li class="facebook">
