--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Leonardo Lunardelli - DoWhile 2022</title>
+    <title>Leonardo Lunardelli</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
     <script src="main.js" defer></script>
