--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
+    <div class="degrade-red"></div>
+    <div class="degrade-yellow"></div>
       <main>
+        <div class="badge-container">
           <div class="container">
               <div class="avatar">
                   <span>
@@ -50,6 +53,7 @@
                     </li>
                 </ul>
           </div>
+        </div>
       </main>
   </body>
 </html>
