--- a/index.html
+++ b/index.html
@@ -5,52 +5,51 @@
     <title>Leonardo Lunardelli</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="style.css" />
-    <script src="main.js" defer></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com/" />
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <main>
       <div class="container">
-
         <div class="avatar">
-                  <span>
-                      <img src="images/build.svg" alt="Selo Rocketseat" />
-                  </span>
-                  <img src="images/Meu projeto.jpg" alt="Foto pessoal" id="userImage" />
-         </div>
+          <span>
+            <img src="images/selo.svg" alt="Selo Rocketseat" class="selo" />
+          </span>
+          <img src="" alt="Foto Pessoal" id="userImage" />
+        </div>
 
-              <h1 id="userName">Leo Lunardelli</h1>
-                <a id="userLink" href="https://github.com/leolunardelli" target="_blank" >
-                  <img src="images/github 2.svg" alt="ícone github" target="_blank" id="git" />  
-                  <span id="userLogin">Leonuar</span></a>
-                  <p id="bioProfile">
-                    An developer focused on frontend always looking to evolve
-                  </p>
-                <ul id="socialLinks">
-                    <li class="youtube">
-                        <a href="https://www.youtube.com/" target="_blank">
-                            <img src="images/Youtube.svg" alt="ícone linkedin" />
-                        </a>
-                    </li>
-                    <li class="facebook">
-                        <a href="https://www.facebook.com/" target="_blank">
-                            <img src="images/Facebook.svg" alt="ícone facebook" />
-                        </a>
-                    </li>
-                    <li class="instagram">
-                        <a href="https://www.instagram.com/" target="_blank">
-                            <img src="images/Instagram.svg" alt="ícone instagram" />
-                        </a>
-                    </li>
-                    <li class="twitter">
-                        <a href="https://twitter.com/" target="_blank">
-                            <img src="images/Twitter.svg" alt="ícone twitter" />
-                        </a>
-                    </li>
-                </ul>
-         </div>
-      </main>
+        <h1 id="userName"></h1>
+        <p id="userBio"></p>
+
+        <ul id="socialLinks">
+          <li class="github">
+            <a href="" target="_blank"
+              ><img src="images/github.svg" alt="Ícone GitHub"
+            /></a>
+          </li>
+          <li class="instagram">
+            <a href="" target="_blank"
+              ><img src="images/instagram.svg" alt="Ícone Instagram"
+            /></a>
+          </li>
+          <li class="linkedin">
+            <a href="" target="_blank"
+              ><img src="images/linkedin.svg" alt="Ícone Linkedin"
+            /></a>
+          </li>
+
+          <li class="email">
+            <a href="" target="_blank"
+              ><img src="images/email.svg" alt="Ícone E-mail"
+            /></a>
+          </li>
+        </ul>
+      </div>
+    </main>
+    <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
