--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <title>Leonardo Lunardelli</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <script src="main.js"></script>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com/" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
@@ -54,6 +55,5 @@
         </ul>
       </div>
     </main>
-    <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
