--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p id="userBio"></p>
 
         <ul id="socialLinks">
-          <li class="github">
+          <li class="GitHubDirect">
             <a href="" target="_blank"
               ><img src="../images/github.svg" alt="Ícone GitHub"
             /></a>
