--- a/index.html
+++ b/index.html
@@ -25,31 +25,31 @@
 
         <h1 id="userName"></h1>
         <a id="userLink" href="" target="_blank">
-        <img src="images/github.svg" alt="Ícone Github">
-        <span id="userLogin"></span>
-      </a>
+            <img src="images/github.svg" alt="Ícone Github">
+          <span id="userLogin"></span>
+        </a>
         <p id="userBio"></p>
 
         <ul id="socialLinks">
-          <li class="GitHubDirect">
+          <li class="github">
             <a href="" target="_blank"
-              ><img src="../images/github.svg" alt="Ícone GitHub"
+              ><img src="images/github.svg" alt="Ícone GitHub"
             /></a>
           </li>
           <li class="instagram">
             <a href="" target="_blank"
-              ><img src="../images/Instagram.svg" alt="Ícone Instagram"
+              ><img src="images/Instagram.svg" alt="Ícone Instagram"
             /></a>
           </li>
           <li class="linkedin">
             <a href="" target="_blank"
-              ><img src="../images/linkedin.svg" alt="Ícone Linkedin"
+              ><img src="images/linkedin.svg" alt="Ícone Linkedin"
             /></a>
           </li>
 
           <li class="email">
             <a href="" target="_blank"
-              ><img src="../images/email.svg" alt="Ícone E-mail"
+              ><img src="images/email.svg" alt="Ícone E-mail"
             /></a>
           </li>
         </ul>
