--- a/index.html
+++ b/index.html
@@ -18,22 +18,24 @@
       <div class="container">
         <div class="avatar">
           <span>
-            <img src="images/selo.svg" alt="Selo Rocketseat" class="selo" />
+            <img src="images/build.svg" alt="Selo Rocketseat" class="selo" />
           </span>
-          <img id="userImage" src="" alt="Foto pessoal"/>
+          
+          <img id="userImage" src="https://github.com/leolunardelli.png" alt="Foto pessoal"/>
         </div>
 
-        <h1 id="userName"></h1>
-        <a id="userLink" href="" target="_blank">
-            <img src="images/github.svg" alt="Ícone Github">
-          <span id="userLogin"></span>
+        <h1 id="userName">Leonardo Lunardelli</h1>
+        <a id="userLink" href="https://instagram.com/leo.lunardelli" target="_blank">
+          <img src="images/github.svg" alt="Ícone Github">
+          <span id="userLogin">leolunardelli</span>
         </a>
-        <p id="userBio"></p>
+        
+        <p id="userBio">Olá sou Desenvolvedor de Software/Tester, graduando em Análise e desenvolvimento de sistemas com habilidades em HTML, CSS, JavaScript e React.JS.</p>
 
         <ul id="socialLinks">
-          <li class="github">
+          <li class="youtube">
             <a href="" target="_blank"
-              ><img src="images/github.svg" alt="Ícone GitHub"
+              ><img src="images/Youtube.svg" alt="Ícone Youtube"
             /></a>
           </li>
           <li class="instagram">
