--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </li>
           <li class="linkedin">
             <a href="" target="_blank"
-              ><img src="images/linkedin.svg" alt="Ícone Linkedin"
+              ><img src="images/Linkedin.svg" alt="Ícone Linkedin"
             /></a>
           </li>
 
