--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
 
         <h1 id="userName">Leonardo Lunardelli</h1>
-        <a id="userLink" href="https://instagram.com/leo.lunardelli" target="_blank">
+        <a id="userLink" href="https://github.com/leolunardelli" target="_blank">
           <img src="images/github.svg" alt="Ícone Github">
           <span id="userLogin">leolunardelli</span>
         </a>
